--- a/src/components/Quiz/quiz.scss
+++ b/src/components/Quiz/quiz.scss
@@ -1,6 +1,6 @@
 @import "./styles/index";
 
-.quiz-parent{
+.quiz-parent {
   font-family: monospace;
   background: linear-gradient(0deg, $primary 0.03%, $accent);
   color: $fore-ground;
@@ -8,57 +8,57 @@
   //align-items: center;
   justify-content: center;
   margin: 0;
-  padding: 0 30px;
-  height: 100vh;
+  padding: 0 3rem;
+  height: 70vh;
 }
 
 .quiz-container {
 
-  width: 500px;
+  width: 50rem;
   background: $bg;
-  border-right: 4px;
-  margin-top: 100px;
-  padding: 30px 60px;
+  border-right: 0.4rem;
+  margin-top: 10rem;
+  padding: 3rem 6rem;
   box-sizing: border-box;
   position: relative;
 
   .active-question-no {
-    font-size: 32px;
+    font-size: 3.2rem;
     font-weight: 500;
     color: $primary;
   }
 
   .total-question-no {
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 400;
     color: $disabled;
   }
 
   h2 {
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 500;
   }
 
   ul {
-    margin-top: 20px;
-    margin-left: -40px;
+    margin-top: 2rem;
+    margin-left: -4rem;
 
     li {
       list-style: none;
       text-decoration: none;
       color: $fore-ground;
-      font-size: 16px;
+      font-size: 1.6rem;
       background: $bg;
-      border: 1px solid $disabled;
-      border-radius: 16px;
-      padding: 11px;
-      margin-top: 15px;
+      border: .1rem solid $disabled;
+      border-radius: 1.6rem;
+      padding: 1.1rem;
+      margin-top: 1.5rem;
       cursor: pointer;
     }
 
     .selected-answer {
       background: $primary;
-      border: 1px solid $accent;
+      border: .1rem solid $accent;
       color: $bg;
     }
   }
@@ -70,13 +70,13 @@
 
   button {
     background: linear-gradient(0deg, $primary 0.03%, $accent);
-    border-radius: 9px;
-    font-size: 18px;
+    border-radius: .9rem;
+    font-size: 2rem;
     color: $bg;
-    padding: 10px 22px;
+    padding: 1rem 2rem;
     outline: none;
     border: none;
-    margin-top: 15px;
+    margin-top: 1.5rem;
 
     &:disabled {
       background: $bg-accent;
@@ -86,17 +86,17 @@
   }
 
   .results {
-    font-size: 24px;
-    letter-spacing: 1.4px;
+    font-size: 3rem;
+    letter-spacing: .5rem;
     text-align: center;
 
     p {
-      font-size: 16px;
+      font-size: 1.6rem;
       font-weight: 500;
 
       span {
         color: $primary;
-        font-size: 22px;
+        font-size: 2.2rem;
       }
     }
   }
